--- a/Angels.ipynb
+++ b/Angels.ipynb
@@ -580,7 +580,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -595,6 +595,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "8a73d5088e7f266324a8a95209be399d387341ecceefdb24935f56d0d0f59ba6"
+   }
   }
  },
  "nbformat": 4,
